# ClaudeSynth

./: .gitignore  BUILDING.md  BUILD_SUCCESS.md  CLAUDE.md  CMakeLists.txt  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  create_xcode_project.sh  test_plugin.sh
Resources/: Info.plist
Source/: ADSREnvelopeView.h  ADSREnvelopeView.mm  ClaudeSynth.cpp  ClaudeSynth.h  ClaudeSynth.mm  ClaudeSynthLogger.h  ClaudeSynthVersion.h  ClaudeSynthView.h  ClaudeSynthView.mm  ClaudeSynth_Debug.cpp  DiscreteKnob.h  DiscreteKnob.mm  MatrixCheckbox.h  MatrixCheckbox.mm  MatrixDropdown.h  MatrixDropdown.mm  MatrixLED.h  MatrixLED.mm  MatrixOscilloscope.h  MatrixOscilloscope.mm  MatrixSlider.h  MatrixSlider.mm  RotaryKnob.h  RotaryKnob.mm  SynthVoice.h
